fix: css properties added in order to fix the zoom in bug on IOS phones

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -8,8 +8,8 @@
 
 body, html
     /*margin: 0 auto
-    background-color: variables.$main-background-color
-    font-family: variables.$font-family
+    background-color: variables.$main-background-color !important
+    font-family: variables.$font-family !important
     max-width: 100%
     min-height: 100vh   
     overflow-x: hidden
@@ -38,13 +38,11 @@ nav
                     color: variables.$dark-cherry-color
 
 .nav-links
-
-
     .cherry-background
-        background-color: variables.$cherry-color
+        background-color: variables.$cherry-color !important
 
     .transparent-background
-        background-color: transparent
+        background-color: transparent !important
 
 .btn-container 
     @include mixins.flex-center
@@ -143,14 +141,11 @@ svg
 
 .container
     width: 100vw
-    /*margin: 0 auto
 
 .navbar-container, nav
     @include mixins.flex-space-around
 
 .colorChange
-    /* background-color: rgb(255, 255, 255) */ 
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1)  */
     backdrop-filter: blur(10px) 
     transition: background 0.3s ease
     color: variables.$cherry-color
@@ -166,7 +161,6 @@ svg
 .navbar-container, .navbar-mobile-container
     position: fixed
     z-index: 20
-    
 
 .navigation-social-media
     @include mixins.flex-space-evenly
@@ -177,10 +171,10 @@ svg
     position: relative
     z-index: 20
     width: 100vw
-    background: rgba(255, 255, 255, 0.26)
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1)
-    backdrop-filter: blur(20px)
-    -webkit-backdrop-filter: blur(20px)
+    background: rgba(255, 255, 255, 0.26) !important
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important
+    backdrop-filter: blur(20px) !important
+    -webkit-backdrop-filter: blur(20px) !important
 
 
     .navbar-mobile-content
@@ -191,7 +185,7 @@ svg
         top: 4vh
         left: 50%
         transform: translate(-50%, -50%)
-        background-color: white
+        background-color: white !important
         z-index: 3
 
         .mobile-logo, .mobile-menu
@@ -205,7 +199,6 @@ svg
             padding-right: 2rem
 
     .navbar-mobile
-        /* background-color: rgba(37, 1, 1, 0.6) */
         width: inherit
         
 
@@ -441,6 +434,7 @@ footer
     background: rgba(0, 0, 0, 0.85)
     z-index: 9999
     cursor: zoom-out
+    touch-action: none !important
 
 
 .image-overlay-content 
@@ -449,6 +443,7 @@ footer
     object-fit: contain
     border-radius: 8px
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5)
+    touch-action: pinch-zoom !important
 
 
 .lightbox-news
@@ -483,7 +478,7 @@ footer
 
 .image-grid-section
     @include mixins.flex-center
-    background-color: variables.$main-background-color
+    background-color: variables.$main-background-color !important
 
     .image-grid-container
         width: 100%
@@ -555,7 +550,7 @@ footer
     position: relative
     top: auto
     z-index: 4
-    background-color: variables.$main-background-color
+    background-color: variables.$main-background-color !important
 
     .image-grid-section
         .image-grid-container 
@@ -744,7 +739,7 @@ footer
 
 .biografia-white-box
     padding: 5rem 0
-    background-color: variables.$white-font-color
+    background-color: variables.$white-font-color !important
     opacity: 1
     position: relative
     z-index: 2
